--- a/app/components/HomeHeader/index.less
+++ b/app/components/HomeHeader/index.less
@@ -25,10 +25,10 @@
     border: none;
   }
 }
-.profile{
+a{
   flex: 0.5;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #FFFFFF;
+  color: #FFFFFF !important;
 }
