选择城市页

--- a/app/components/HomeHeader/index.less
+++ b/app/components/HomeHeader/index.less
@@ -4,8 +4,14 @@
   flex-direction: row;
   align-items: center;
   color: #FFF;
-  .city{
+  a{
+    color: #FFF;
+  }
+  & :nth-child(1){
     flex: 1;
+    display: flex;
+  }
+  .city{
     text-align: center;
   }
 }
