--- a/app/components/Slider/index.less
+++ b/app/components/Slider/index.less
@@ -2,17 +2,21 @@
   ul{
     display: flex;
     flex-wrap: wrap;
+    a{
+      width: 20%;
+      span{
+        color: #333333;
+      }
+    }
     li{
       i{font-size: 20px;color: #E9203D}
       display: flex;
       flex-direction: column;
-      width: 20%;
       line-height: 30px;
       text-align: center;
     }
   }
-  }
-
+}
 .dots{
   display: flex;
   justify-content: center;
